// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DisputeStatusChip renders charge_refunded status 1`] = `
<div>
  <span
    class="chip chip-light"
  >
    Charge refunded
  </span>
</div>
`;

exports[`DisputeStatusChip renders default appearance if status is unrecognized 1`] = `
<div>
  <span
    class="chip chip-light"
  >
    Mock status
  </span>
</div>
`;

exports[`DisputeStatusChip renders lost status 1`] = `
<div>
  <span
    class="chip chip-light"
  >
    Lost
  </span>
</div>
`;

exports[`DisputeStatusChip renders needs_response status 1`] = `
<div>
  <span
    class="chip chip-warning"
  >
    Needs response
  </span>
</div>
`;

exports[`DisputeStatusChip renders under_review status 1`] = `
<div>
  <span
    class="chip chip-primary"
  >
    Under review
  </span>
</div>
`;

exports[`DisputeStatusChip renders warning_closed status 1`] = `
<div>
  <span
    class="chip chip-light"
  >
    Inquiry: Closed
  </span>
</div>
`;

exports[`DisputeStatusChip renders warning_needs_response status 1`] = `
<div>
  <span
    class="chip chip-warning"
  >
    Inquiry: Needs response
  </span>
</div>
`;

exports[`DisputeStatusChip renders warning_under_review status 1`] = `
<div>
  <span
    class="chip chip-primary"
  >
    Inquiry: Under review
  </span>
</div>
`;

exports[`DisputeStatusChip renders won status 1`] = `
<div>
  <span
    class="chip chip-success"
  >
    Won
  </span>
</div>
`;
